# xr-home-suite

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  build-native.ps1  pyproject.toml
apps/openxr_probe/: CMakeLists.txt  main.cpp
docs/: research.md  xr-home-suite-research-llm-prompt.md  xr-link-capability-matrix.md
docs/architecture/: adr-0001-stack.md  adr-0002-no-script-workflows.md  adr-0003-external-workspace.md  adr-0004-native-probe-role.md  adr-0005-unreal-access-gate.md  overview.md
docs/unreal/: engine-gate.md  validation-project.md
libs/xrh_core/: CMakeLists.txt
libs/xrh_core/include/xrh/core/: app_options.h  checks.h  openxr_platform.h  overlay_state.h  probe_report.h  shutdown_signal.h
libs/xrh_core/src/: app_options.cpp  checks.cpp  probe_report.cpp  shutdown_signal_win32.cpp
libs/xrh_d3d11/: CMakeLists.txt
libs/xrh_d3d11/include/xrh/d3d11/: d3d11_renderer.h
libs/xrh_d3d11/src/: d3d11_device.cpp  d3d11_resources.cpp  overlay_renderer.cpp  screenshot_capture.cpp
libs/xrh_meta/: CMakeLists.txt
libs/xrh_meta/include/xrh/meta/: meta_features.h
libs/xrh_meta/src/: environment_depth.cpp  hand_tracking.cpp  meta_features.cpp  passthrough.cpp  private_camera.cpp
libs/xrh_openxr/: CMakeLists.txt
libs/xrh_openxr/include/xrh/openxr/: openxr_context.h
libs/xrh_openxr/src/: openxr_context.cpp
scripts/: ensure-openxr-deps.ps1
src/: live_link_app.cpp
tests/: CMakeLists.txt  core_tests.cpp
unreal/XRHSValidation/: XRHSValidation.uproject
unreal/XRHSValidation/Config/: DefaultEditorPerProjectUserSettings.ini  DefaultEngine.ini  DefaultGame.ini
unreal/XRHSValidation/Source/: XRHSValidation.Target.cs  XRHSValidationEditor.Target.cs
unreal/XRHSValidation/Source/XRHSValidation/: XRHSValidation.Build.cs
unreal/XRHSValidation/Source/XRHSValidation/Private/: XRHSValidation.cpp  XRHSValidationGameMode.cpp  XRHSValidationPawn.cpp
unreal/XRHSValidation/Source/XRHSValidation/Public/: XRHSValidationGameMode.h  XRHSValidationPawn.h
unreal/XRHSValidation/Source/XRHSValidationEditor/: XRHSValidationEditor.Build.cs
unreal/XRHSValidation/Source/XRHSValidationEditor/Private/: XRHSValidationEditorModule.cpp
unreal/XRHomeSuiteValidation/: XRHomeSuiteValidation.uproject
unreal/XRHomeSuiteValidation/Config/: DefaultEditorPerProjectUserSettings.ini  DefaultEngine.ini  DefaultGame.ini
unreal/XRHomeSuiteValidation/Source/: XRHomeSuiteValidation.Target.cs  XRHomeSuiteValidationEditor.Target.cs
unreal/XRHomeSuiteValidation/Source/XRHomeSuiteValidation/: XRHomeSuiteValidation.Build.cs
unreal/XRHomeSuiteValidation/Source/XRHomeSuiteValidation/Private/: XRHSValidationPawn.cpp  XRHomeSuiteValidation.cpp
unreal/XRHomeSuiteValidation/Source/XRHomeSuiteValidation/Public/: XRHSValidationGameMode.h  XRHSValidationPawn.h
xrhs/: __init__.py  __main__.py  architecture.py  deps.py  doctor.py  paths.py  secrets.py  unreal.py
