[project]
name = "xr-home-suite-tools"
version = "0.1.0"
description = "Repository tooling for XR Home Suite."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xrhs*"]

[tool.xr-home-suite]
external-home = "C:/XRHomeSuite"
